fix: profile picture Fixed issue where the profile picture was too low.

--- a/src/components/portrait/profile-pic.css
+++ b/src/components/portrait/profile-pic.css
@@ -1,3 +1,3 @@
 main .profile-pic {
-    @apply w-52 absolute left-12 top-44 rounded-full;
+    @apply w-52 absolute left-12 top-16 rounded-full;
 }
